# django-jwt-react-proj

./: .gitignore  package-lock.json  package.json  pyproject.toml  webpack.config.js
djsr/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
djsr/authentication/migrations/: 0001_initial.py
djsr/djsr/: settings.py  urls.py
djsr/frontend/: urls.py
djsr/frontend/src/: axiosApi.js
djsr/frontend/src/components/: App.js  hello.js  login.js
djsr/frontend/static/frontend/: style.css
djsr/frontend/static/frontend/public/: main.js
